--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   }
 }
 
+body {
+  font-family: "Fira Sans Condensed", sans-serif;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
