--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,12 @@
   mix-blend-mode: difference;
   z-index: 999;
   pointer-events: none;
+  /*
+    shadow white, material shadow
+  */
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(250, 250, 250, 0.83) 0px 30px 60px -30px,
+    rgba(255, 255, 255, 0.8) 0px -2px 6px 0px inset;
 }
 
 * {
