feat: add framer motion to app and play around

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Righteous, Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Montserrat, Inter, Avenir, Helvetica, Arial, sans-serif;
   line-height: 24px;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
